# lyricsync

./: .dockerignore  .gitignore  Dockerfile  README.md  lyric_aligner_spec.md  pyproject.toml  run-dev.sh  run.sh
demo_example/: Two Can Goober.txt
editor/: README.md  index.html  package-lock.json  package.json  vite.config.ts
editor/src/: App.css  App.tsx  types.ts
src/lyricsync/: __init__.py  align.py  alignment.py  alignment_json.py  cli.py  extract.py  lyrics.py  preview.py  serve_app.py  srt.py
src/lyricsync/animation/: __init__.py  ass.py  styles.py
src/lyricsync/editor_static/: index.html
src/lyricsync/editor_static/assets/: index-CoTEe84F.css  index-Cq8UM__C.js  index-D4KTxKZW.css  index-DaY5hUI6.js  index-DtGblSPN.css  index-POC1xkld.css  index-Tl0-Y55j.js  index-Un_bEHgs.css  index-uHTcPHlh.js
tests/: test_alignment_json.py  test_animation_ass.py  test_lyrics.py  test_preview.py  test_serve.py  test_srt.py
