[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lyricsync"
version = "0.0.1"
description = "Forced-alignment CLI for music video lyrics."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jacob Baron" }]
license = { text = "MIT" }
dependencies = [
    # CLI
    "typer>=0.12",
    # Alignment. whisperx pulls in torch/torchaudio/transformers.
    # Pinned loosely; v0 just needs *an* install that works on the
    # dev machine — v1 will tighten this when we add CI.
    "whisperx>=3.1",
]

[project.scripts]
lyricsync = "lyricsync.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lyricsync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
